--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,14 @@
 		{
 			"type": "lldb",
 			"request": "launch",
+			"name": "Launch",
+			"program": "${workspaceFolder}/<your program>",
+			"args": [],
+			"cwd": "${workspaceFolder}"
+		},
+		{
+			"type": "lldb",
+			"request": "launch",
 			"name": "Debug",
 			"program": "${workspaceFolder}/<executable file>",
 			"args": [],
